[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Buttons.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/ProgressBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HUD.gd" type="Script" id=3]
[ext_resource path="res://Assets/Graphics/boton_mano.png" type="Texture" id=5]
[ext_resource path="res://Assets/Graphics/boton_pinzas.png" type="Texture" id=6]

[node name="HUD" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_bottom = 720.0

[node name="ProgressBar" parent="." instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 0.0
margin_right = 195.0
margin_bottom = 720.0

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 199.0
margin_right = 1144.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" parent="." instance=ExtResource( 1 )]
margin_left = 1148.0
margin_top = 0.0
margin_right = 1276.0
margin_bottom = 720.0

[node name="TextureButton" parent="Buttons/tweezers" index="0"]
texture_normal = ExtResource( 6 )

[node name="TextureButton" parent="Buttons/pull" index="0"]
texture_normal = ExtResource( 5 )

[node name="MarginContainer3" type="MarginContainer" parent="."]
margin_left = 1280.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="Buttons/hot_wax/TextureButton" to="." method="_on_hot_wax_pressed"]
[connection signal="pressed" from="Buttons/tweezers/TextureButton" to="." method="_on_tweezers_pressed"]
[connection signal="pressed" from="Buttons/pull/TextureButton" to="." method="_on_pull_pressed"]

[editable path="Buttons"]
[editable path="Buttons/hot_wax"]
[editable path="Buttons/tweezers"]
[editable path="Buttons/pull"]
